--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
+    <string name="facebook_app_id" translatable="false">1887230464938657</string>
     <string name="pm_login_btn">Login with LinkedIn</string>
     <string name="pm_msg_no_network">No network</string>
     <string name="pm_btn_ok">OK</string>
     <string name="pm_error_msg">Error : %s</string>
+    <string name="pm_error_canceled">Canceled!</string>
+    <string name="pm_login_btn_fb">Connect with Facebook</string>
 </resources>
