AreadNext integrated. The SDK is linked to the device IMEI to identify the device and on reinstall will not count the device as new. SDK tested with BG and ITA id cards :  	1. Can't detect issue's date  	2. Can't detect Face image(it seems that is searching for it on the back side where the MRZ is)  	3. The only way for the SDK to get a expiration date is from NFC tag (even after explicitly set the option  	for reading the tag, the SDK is not asking for reading it. Probably after OCR scan knows that ID from those  	countries has no NFC chip?)  	4. Some times(around 20%) the SDK is not 100% accurate and the user has to scan his ID again after check(Most of the time  	is mistaken V with W or Y)  	5. Some times the SDK returns status of the ID "Invalid"(Only 2-3 times out of 20 from the BG ID and  	probably 50% for the ITA. The Italian ID is issued 2 weeks ago and is the new type of ID and that could be the  	problem, as not well known for the SDK)
 Aar file for the sdk is > 14MB and that increases  the app build to 16MB.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Peer Mountain Demo</string>
-    <string name="login_btn">Login with LinkedIn</string>
+    <string name="btn_scan_id">Scan ID</string>
+    <string name="btn_logout">Logout</string>
 </resources>
