--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -25,25 +25,25 @@
     <string name="pm_login_title">Login</string>
     <string name="pm_pin_match_error_msg">PIN Code doesn\'t match!</string>
     <!--Fingerprint login-->
-    <string name="dialog_title_login">Do you want to activate fingerprint option to unlock the app? </string>
+    <string name="pm_dialog_title_login">Do you want to activate fingerprint option to unlock the app? </string>
 
-    <string name="btn_fingerprint">Activate fingerprint</string>
-    <string name="dialog_fingerprint_info">Fingerprint option is enabled!</string>
-    <string name="btn_dont_save_code">Close</string>
-    <string name="position_finger_for_scan">Scan you finger</string>
-    <string name="err_no_fingerprint_permission">No permission for getting fingerprint</string>
-    <string name="err_no_saved_fingerprint">Please register fingerprint first in the system.</string>
-    <string name="err_no_keyguard">To use the fingerprint scanner, the system must be protected with pin or pattern</string>
-    <string name="btn_add_pass">Create</string>
-    <string name="btn_dont_add_pass">I don\'t want to</string>
-    <string name="message_fast_login_enabled">Fingerprint is enabled!</string>
+    <string name="pm_btn_fingerprint">Activate fingerprint</string>
+    <string name="pm_dialog_fingerprint_info">Fingerprint option is enabled!</string>
+    <string name="pm_btn_don_t_save_code">Close</string>
+    <string name="pm_position_finger_for_scan">Scan you finger</string>
+    <string name="pm_err_no_fingerprint_permission">No permission for getting fingerprint</string>
+    <string name="pm_err_no_saved_fingerprint">Please register fingerprint first in the system.</string>
+    <string name="pm_err_no_keyguard">To use the fingerprint scanner, the system must be protected with pin or pattern</string>
+    <string name="pm_btn_add_pass">Create</string>
+    <string name="pm_btn_dont_add_pass">I don\'t want to</string>
+    <string name="pm_message_fast_login_enabled">Fingerprint is enabled!</string>
+    <string name="pm_dialog_confirm_user_title" translatable="false">Please confirm is you by scanning your finger</string>
 
-    <!--unused-->
-    <string name="dialog_confirm_user_title" translatable="false">Моля потвърдете, че сте вие</string>
-    <string name="dialog_fast_or" translatable="false">или Парола</string>
-    <string name="check_dont_ask_me_any_more" translatable="false">Не ме питай повече</string>
-    <string name="hint_fast_code" translatable="false">код 4&#8211;6 числа</string>
-    <string name="btn_save_code" translatable="false">Запази кода</string>
+        <!--unused-->
+        <string name="dialog_fast_or" translatable="false">или Парола</string>
+        <string name="check_dont_ask_me_any_more" translatable="false">Не ме питай повече</string>
+        <string name="hint_fast_code" translatable="false">код 4&#8211;6 числа</string>
+        <string name="btn_save_code" translatable="false">Запази кода</string>
     <!--Fingerprint login end-->
     <!-- register fragment end-->
 
@@ -57,7 +57,8 @@
 
     <!--scan id fragment-->
     <string name="pm_btn_scan_id_msg">Scan your ID or Passport.\nPlease prepare your document for scan from MRZ side first!</string>
-    <string name="btn_ask_for_permission_again">OK</string>
+    <string name="pm_btn_ask_for_permission_again">OK</string>
+    <string name="pm_lbl_loading_sdk">Loading&#8230;</string>
     <string name="btn_refuse_permission">Refuse</string>
     <string name="pm_err_msg_init_scan_id">SDK error init</string>
     <string name="pm_err_msg_scan_data">There was a problem with ID data extraction. Please try again!</string>
@@ -78,11 +79,18 @@
     <string name="pm_lbl_ln">LINKEDIN ACCOUNT</string>
     <string name="pm_register_btn_connect">Connect</string>
     <string name="pm_register_btn_disconnect">Disconnect</string>
-    <string name="title_activity_home">HomeActivity</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
     <!--register profile fragment end-->
+
+    <!--home fragment-->
+    <string name="pm_title_home">Home</string>
+    <string name="pm_tab_activity">ACTIVITY</string>
+    <string name="pm_tab_information">INFORMATION</string>
+    <!--home fragment end-->
+
+    <!--menu fragment-->
+    <string name="pm_menu_home">Home</string>
+    <string name="pm_menu_documents">Documents</string>
+    <string name="pm_menu_contacts">Contacts</string>
+    <string name="pm_menu_settings">Settings</string>
+    <!--menu fragment end-->
 </resources>
