--- a/peermountain_core/src/main/res/values/strings.xml
+++ b/peermountain_core/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <!--<string name="app_name">peermountain_core</string>-->
+    <string name="pm_error_missing_permissions">Without granted permissions this service is not available</string>
 </resources>
