--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -112,8 +112,10 @@
     <string name="pm_profile_settings_lbl_fb">Facebook</string>
     <string name="pm_profile_settings_lbl_ln">Linkedin</string>
     <string name="pm_settings_add_to_contacts">ADD TO CONTACTS</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pm_settings_remove_from_contacts">REMOVE FROM CONTACTS</string>
     <!--profile fragment end-->
+
+    <!--documents fragment-->
+    <string name="pm_title_documents">Documents</string>
+    <!--documents fragment end-->
 </resources>
