--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -118,4 +118,26 @@
     <!--documents fragment-->
     <string name="pm_title_documents">Documents</string>
     <!--documents fragment end-->
+
+    <!--contacts fragment-->
+    <string name="pm_title_contacts">Contacts</string>
+    <!--contacts fragment end-->
+
+    <!--tutorial fragment-->
+    <string name="pm_tuto1_title">Title 1</string>
+    <string name="pm_tuto2_title">Title 2</string>
+    <string name="pm_tuto3_title">Title 3</string>
+    <string name="pm_tuto1_msg">Message 1.1</string>
+    <string name="pm_tuto2_msg">Message 2.1</string>
+    <string name="pm_tuto3_msg">Message 3.1</string>
+    <string name="pm_tuto1_msg2">Message 1.2</string>
+    <string name="pm_tuto2_msg2">Message 2.2</string>
+    <string name="pm_tuto3_msg2">Message 3.2</string>
+    <string name="pm_tuto_next">NEXT</string>
+    <string name="pm_tuto_skip">SKIP</string>
+    <string name="pm_tuto_start">Start</string>
+    <string name="pm_ad_title">SWISS MILES &amp; MORE CLASSIC CARD DUO</string>
+    <string name="pm_ad_msg">swiss miles &amp; more classic card duo</string>
+    <string name="pm_ad_get_the_card">Get the card</string>
+    <!--tutorial fragment end-->
 </resources>
