--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -154,7 +154,7 @@
     <string name="pm_tuto_skip">SKIP</string>
     <string name="pm_tuto_start">Start</string>
     <string name="pm_ad_title">SWISS MILES &amp; MORE CLASSIC CARD DUO</string>
-    <string name="pm_ad_msg">swiss miles &amp; more classic card duo</string>
+    <string name="pm_ad_msg">In the 1st year CHF 60- instead of CHF 120\nannual fee as of 2nd year.\nAs a welcome gift I will receive 20,000 award miles instead of 2,000.\n\n\nThe annual interest is 12%</string>
     <string name="pm_ad_get_the_card">Get the card</string>
 
     <!-- TODO: Remove or change this placeholder text -->
