--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -143,7 +143,7 @@
     <string name="pm_profile_settings_lbl_ln">Linkedin</string>
     <string name="pm_settings_add_to_contacts">ADD TO CONTACTS</string>
     <string name="pm_settings_remove_from_contacts">REMOVE FROM CONTACTS</string>
-    <string name="pm_contact_btn_not_validated">Validate</string>
+    <string name="pm_contact_btn_not_validated">Cross Validate</string>
     <string name="pm_contact_btn_validated">Validated</string>
     <!--profile fragment end-->
 
