add new file document from menu and card, save/update/remove file document from storage

--- a/peermountain_sdk/src/main/res/values/strings.xml
+++ b/peermountain_sdk/src/main/res/values/strings.xml
@@ -149,8 +149,12 @@
 
     <!--documents fragment-->
     <string name="pm_title_documents">Documents</string>
-    <string name="pm_document_item_empty">Locked</string>
+    <string name="pm_document_item_empty">Add new file</string>
+    <string name="pm_add_new_file_from_card">Add</string>
+    <string name="pm_documents_item_btn_update">Update</string>
     <string name="pm_document_item_id_title">Identity Document</string>
+    <string name="pm_upload_doc_menu">Upload Doc.</string>
+    <string name="pm_scan_id_menu">Scan ID</string>
     <!--documents fragment end-->
 
     <!--contacts fragment-->
@@ -203,7 +207,6 @@
     <string name="pm_share_using_google_nearby">Using Google NearBy</string>
     <string name="pm_share_using_qr_code">Using QR Code</string>
     <string name="pm_share_title">Add contact</string>
-    <string name="pm_documents_item_btn_update">Update</string>
     <!--Share fragment end-->
 
 </resources>
